--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Demo: Are You Sure? - a dirty forms jQuery Plugin</title>
+    <title>Demo: Are You Sure</title>
 
     <!-- 
 
